Fix scrollbar moving everything

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -37,6 +37,7 @@ router-outlet ~ * {
   flex: 1;
   overflow-y: auto;
   overflow-x: hidden;
+  scrollbar-gutter: stable;
 }
 
 .modal-dialog {
